--- a/style.css
+++ b/style.css
@@ -9,16 +9,16 @@
     --primary-btn-hover-color: #2e2e44;
     --fz-primary: 'Roboto';
     --shopping-card-border: 2px solid #030911;
-    --shopping-card-box-shadow: 3px 5px 11px -1px #04101B;
-    
+    --shopping-card-box-shadow: 3px 5px 11px -1px #04101B; 
 }
-
 
 * {
     padding: 0px;
     margin:0px;
     box-sizing: border-box;
     font-family: 'Roboto';
+    list-style: none;
+    text-decoration: none;
 }
 
 @font-face {
@@ -26,8 +26,7 @@
     src: url('./webfonts/roboto/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    }
-
+}
 
 ::-webkit-scrollbar {
   width: 20px;
@@ -48,11 +47,6 @@
   background-color: #353550;
 }
 
-
-
-
-
-
 nav {
     background-color: #050b1283;
     width: 100%;
@@ -62,36 +56,30 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 1;
 }
 
 nav img {
     height: 11.7vh;
     padding: 16px;
-
 }
+
 nav ul {
     margin-right: 24px;
     display: flex;
     gap: 24px;
-    list-style: none;
 }
 
 nav ul li a {
     font-size: 24px;
-    text-decoration: none;
     color: var(--primary-color);
 }
-
-
 
 .bg-setup {
     background-image: url(./img/background.png);
     background-position: 50% 40%;
     background-attachment: fixed;
     background-size: cover;
-
-   
 }
 
 .bg-top-height {
@@ -109,17 +97,14 @@ nav ul li a {
     object-fit: cover;
     background-size: auto 100%;
     background-position: 50% 15%;
-    z-index: 999;
-
 }
 
 .filter-container {
     position: absolute;
-    top: 85.7vh;
+    top: 85.6vh;
     width: 100%;
     height: 300vh;
     background-color: var(--primary-cards-bg);
-    z-index: 1;
 }  
 
 .container {
@@ -145,7 +130,6 @@ nav ul li a {
     margin-left: 8px;
 }
 
-
 .cards-container {
     display: flex;
     justify-content: center;
@@ -153,11 +137,6 @@ nav ul li a {
     margin-block: 64px;
     gap: 16px;
     
-}
-
-.flex  {
-    display: flex;
-
 }
 
 .card {
@@ -176,17 +155,11 @@ nav ul li a {
     box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
 }
 
-
-
-
-
 .card > .row  {
     height: 100%;
     color: white;
     display: flex;
 }
-
-
 
 .card > .row > .row-coloum {
     height: 100%;
@@ -197,7 +170,6 @@ nav ul li a {
 
 }
 
-
 .row-coloum h4 {
     height: 500px;
     writing-mode: vertical-lr; 
@@ -205,8 +177,6 @@ nav ul li a {
     text-transform: uppercase;
     color: var(--primary-color);
 }
-
-
 
 .card > .row > .row-coloum > .icon {
     background: var(--primary-btn-bg-color);
@@ -221,7 +191,6 @@ nav ul li a {
 }
 
 .card > .row > .description {
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -236,17 +205,12 @@ nav ul li a {
     cursor: default;
 }
 
-
-
 .description p {
     color: var(--primary-color);
     padding-top: 5px;
     text-wrap: balance;
     font-size: 20px;
-
 }
-
-
 
 input {
     display: none;
@@ -278,15 +242,11 @@ input:checked + label .description {
     align-items: center;
 }
 
-
-
-
 .add-btn {
     height: 100%;
     display: flex;
     align-items: end;
 }
-
 
 .add,
 .add-amount {
@@ -303,9 +263,6 @@ input:checked + label .description {
     border: 0;
 }
 
-
-
-
 .add:hover,
 .add-amount:hover,
 .pay-btn-container button:hover {
@@ -316,30 +273,20 @@ input:checked + label .description {
     border: 2px solid #030911;
 }
 
-
-
-
 .add-amount {
     width: 40px;
     height: 40px;
 }
 
-
-
-
-
-
-
-
-
 .shopping-card-container {
     position: sticky;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     top: 11.7vh;
+    height: 80vh;
     margin: 64px 56px 0 16px ;
-    max-height: 500px;
     width: clamp(350px, 25%, 500px);
     border: var(--primary-border);
     border-radius: 24px;
@@ -351,7 +298,7 @@ input:checked + label .description {
     position: flex;
     top: 0;
     width: 95%;
-    max-height: 420px;
+   
     margin-top: 16px;
     display: flex;
     flex-direction: column;
@@ -381,6 +328,7 @@ input:checked + label .description {
 
 .delivery-case-flex {
     display: flex;
+    min-width: 265px;
     justify-content: center;
     align-items: center;
     gap: 8px;
@@ -442,7 +390,7 @@ input:checked + label .description {
 .pay-btn-container button {
     font-size: 24px;
     color: var(--primary-color-shopping-card);
-    width: 80%;
+    width: clamp(250px, 80%, 280px);
     height: 50px;
     border-radius: 20px;
     cursor: pointer;
@@ -450,9 +398,7 @@ input:checked + label .description {
     background-color: var(--primary-btn-bg-color)
 }
 
-.d-none {
-    display: none;
-}
+
 
 .shopping-card-info h2{
     font-weight: 300;
@@ -465,6 +411,51 @@ input:checked + label .description {
     text-wrap: balance;
 }
 
+.pay-info-mobile {
+    position: fixed;
+    display: none;
+    justify-content: center;
+    width: 100%;
+    z-index: 11;
+    bottom: 0;
+    padding-bottom: 24px;
+    align-items: center;
+    
+
+    
+}
+
+.pay-info-mobile button {
+    color: var(--primary-color);
+    width: clamp(320px, 98%, 1004px);
+    font-size: 24px;
+    height: 50px;
+    background-color: var(--primary-btn-bg-color);
+    border-radius: 32px;
+    border: 0;
+}
+
+.wrapper-btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+.mobile-popup-bg {
+    height: 0;
+    display: block;
+    background: #030a12;
+    z-index: 10;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 @media (max-width: 1660px) {
@@ -554,9 +545,27 @@ input:checked + label .description {
 }
 
 @media (max-width: 1004px) {
-    .shopping-card-container{
+    .shopping-card-container {
         display: none;
+        position: fixed;
+        top: 0;
+        margin: 32px;
+        width: clamp(310px, calc(100% - 64px), 900px);
+        z-index: 400;
+        transition: height 0.5s ease;
     }
+    
+    .mobile-popup-bg {
+        height: 100%;
+    }
+
+    .shopping-card-flex {
+        width: 30%;
+    }
+    .pay-info-mobile {
+        display: flex;
+    }
+
     .grid main {
         width: 100%;
     }
@@ -622,6 +631,9 @@ input:checked + label .description {
     .filter-container {
         top: 51.7vh;
     }
+    .shopping-card-flex {
+        width: 100%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -641,7 +653,6 @@ input:checked + label .description {
     .filter-container {
         top: 41.7vh;
     }
-
 }
 
 @media (max-width: 413px) {
@@ -654,8 +665,66 @@ input:checked + label .description {
     }
 }
 
+@media (max-width: 382px) {
+    .shopping-card-container {
+        margin: 32px 12px;
+        width: clamp(300px, calc(100% - 24px), 900px)
+    }
+
+    .shopping-card {
+        margin-block: 16px;
+        padding: 0;
+        padding: 16px 0 16px 0;
+    }
+    .shopping-card h1 {
+        font-size: 32px;        
+    }
+ 
+    .shopping-card-flex {
+        font-size: 12px; 
+        padding: 8px;
+    }
+    .delivery-case-flex {
+        padding-inline: 8px;
+    }
+}
+
+
+/* -----------media for heigth ------------*/
 @media (max-width: 348px) {
     #card5 h4 {
         padding-top: 24px; 
     }
+}
+
+@media (max-height: 580px) {
+    .shopping-card-container {
+        height: 75vh;
+        
+    }
+}
+
+@media (max-height: 500px) {
+    .shopping-card-container {
+        height: 70vh;
+        
+    }
+}
+
+@media (max-height: 400px) {
+    .shopping-card-container {
+        height: 65vh;
+        
+    }
+}
+
+@media (max-height: 300px) {
+    .shopping-card-container {
+        height: 60vh;
+        
+    }
+}
+
+.d-none {
+    display: none;
 }
