--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: #262626;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -41,6 +41,7 @@
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
+
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -761,4 +762,3 @@ input:checked + label .description {
 .d-none {
     display: none;
 }
-
