--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #353550;
+  background-color: var(--accent-color);
 }
 
 nav {
@@ -410,6 +410,18 @@ input:checked + label .description {
     background-color: var(--primary-btn-hover-color);
 }
 
+.pay-btn-container-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.pay-btn-container-flex p {
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 16px;
+}
 .clicked {
     border: 2px solid #030911;
 }
